<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.exasol</groupId>
    <artifactId>csv-preview-app</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>war</packaging>

    <dependencies>
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>${dep.jakarta.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.primefaces</groupId>
            <artifactId>primefaces</artifactId>
            <version>${dep.primefaces.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${dep.lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-csv</artifactId>
		    <version>${dep.commons-csv.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.omnifaces</groupId>
		    <artifactId>omnifaces</artifactId>
		    <version>${dep.omnifaces.version}</version>
		</dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${dep.junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${dep.assertj-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
		  <groupId>org.mockito</groupId>
		  <artifactId>mockito-core</artifactId>
		  <version>${dep.mockito-core.version}</version>
		  <scope>test</scope>
		</dependency>
        <dependency>
		  <groupId>org.mockito</groupId>
		  <artifactId>mockito-junit-jupiter</artifactId>
		  <version>${dep.mockito-junit-jupiter.version}</version>
		  <scope>test</scope>
		</dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${dep.junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${dep.lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${plugin.maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${plugin.maven-failsafe-plugin.version}</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <failOnMissingWebXml>false</failOnMissingWebXml>

        <dep.lombok.version>1.18.16</dep.lombok.version>
        <dep.junit.version>5.7.1</dep.junit.version>
        <dep.jakarta.version>8.0.0</dep.jakarta.version>
        <dep.primefaces.version>10.0.0</dep.primefaces.version>
        <dep.commons-csv.version>1.8</dep.commons-csv.version>
        <dep.omnifaces.version>3.11.1</dep.omnifaces.version>

        <plugin.maven-failsafe-plugin.version>2.22.0</plugin.maven-failsafe-plugin.version>
        <plugin.maven-surefire-plugin.version>2.22.0</plugin.maven-surefire-plugin.version>
        <dep.assertj-core.version>3.18.1</dep.assertj-core.version>
        <dep.mockito-core.version>3.11.2</dep.mockito-core.version>
        <dep.mockito-junit-jupiter.version>3.11.2</dep.mockito-junit-jupiter.version>
    </properties>

</project>